# DocGraph

./: .gitignore  AGENTS.md  BASELINE_PLATFORM.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SECURITY_MODEL.md  START_APP.bat  START_APP_UI.bat  USER_MANUAL.md
architecture/: ARCHITECTURE.md  KNOWLEDGE_TRANSFER_MAP.md  MIGRATION_BASELINE.md  MODULE_MAPPING.md
crates/action_core/: Cargo.toml
crates/app_services/: Cargo.toml
crates/cli_app/: Cargo.toml
crates/core_domain/: Cargo.toml
crates/document_text_runtime/: Cargo.toml
crates/io_runtime/: Cargo.toml
crates/llm_cloud/: Cargo.toml
crates/llm_core/: Cargo.toml
crates/llm_local/: Cargo.toml
crates/project_runtime/: Cargo.toml
crates/spec_runtime/: Cargo.toml
crates/tool_runtime/: Cargo.toml
crates/ui_core/: Cargo.toml
crates/ui_i18n/: Cargo.toml
crates/ui_slint/: Cargo.toml
crates/ui_slint/src/: lib.rs
crates/ui_theme/: Cargo.toml
crates/verify_progress/: Cargo.toml
crates/workspace_core/: Cargo.toml
dev/: run_dev_tool.bat
dev/config/: dev_tools_registry.json
dev/plugins/: PLUGIN_FORMAT_SPEC.md
dev/scripts/: SCRIPTS_INDEX.md  audit_cargo_tooling_report.bat  audit_f9_operational_boundary.bat  build_icon_ico.py  cargo_all.bat  cargo_check.bat  cargo_clippy.bat  cargo_fmt.bat  cargo_strict.bat  cargo_test.bat  (+8 more)
docs/: ENGINEERING_NOTES.md
governance/: FUNCTIONAL_SCOPE.md  GOVERNANCE.md  I18N_POLICY.md  INHERITED_GOVERNANCE.md  LLM_RUNTIME_POLICY.md  UI_SLINT_POLICY.md  UI_THEME_POLICY.md  WORKSPACE_RULES.md
(+386 files in other folders)
